HelloUltraviolet/Fixtures/RejectedSource/Procedures/InvariantPublicMutableField/Expected.uv
//! Expected diagnostic metadata for the InvariantPublicMutableField rejected-source specimen.

expectedDiagnostic("E-SEM-2824", "req.15.TypeInvariantsForbidPublicMutableFields")
